Use System.nanotTime instead of System.curretTimeMillis to get a steady clock not impacted by clock adjustment. Also use Duration as interface.